# DepenceClone

./: .gitignore  CMakeLists.txt  README.md
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/core/: IComponent.h  IObserver.h  ISerializable.h  Singleton.h
src/models/: FixtureModel.h  GroupModel.h
src/opengl/: WaterCurtainWidget.cpp  WaterCurtainWidget.h
src/utils/: ScreenAdapter.h
